--- a/Angular_Client/src/app/pages/components/__danh_muc/bai-kiem-tra/bai-kiem-tra.component.html
+++ b/Angular_Client/src/app/pages/components/__danh_muc/bai-kiem-tra/bai-kiem-tra.component.html
@@ -127,7 +127,7 @@
               </label>
             </td>
             <td>{{ i + 1 }}</td>
-            <td>{{ formatString(item.TenBaiKiemTra, item.NamHoc) }}</td>
+            <td>{{ item.TenBaiKiemTra}} ({{item.NamHoc}})</td>
             <td>{{ item.SoLuongDe }} đề</td>
             <td>{{ item.Lop }}</td>
             <td>
