Update chức năng lưu tạm bài kiểm tra cấu hình

--- a/Angular_Client/src/app/pages/components/__danh_muc/bai-kiem-tra-cau-hinh/bai-kiem-tra-cau-hinh.component.html
+++ b/Angular_Client/src/app/pages/components/__danh_muc/bai-kiem-tra-cau-hinh/bai-kiem-tra-cau-hinh.component.html
@@ -177,7 +177,7 @@
                 </span>
               </a>
               <a
-                *ngIf="item.Level == 1"
+                *ngIf="item.TrangThai == 1"
                 matTooltip="Chỉnh sửa"
                 matTooltipPosition="after"
                 class="btn btn-icon btn-light btn-hover-primary btn-sm mr-3"
