--- a/Angular_Client/src/app/pages/components/__quan_tri/quan-li-mon-hoc/quan-li-mon-hoc.component.html
+++ b/Angular_Client/src/app/pages/components/__quan_tri/quan-li-mon-hoc/quan-li-mon-hoc.component.html
@@ -2,7 +2,7 @@
   <!-- Header Page -->
   <div class="card-header">
     <div class="card-title">
-      <h3 class="card-label">NGÂN HÀNG CÂU HỎI</h3>
+      <h3 class="card-label">Danh sách môn học</h3>
     </div>
   </div>
   <!-- End Header Page -->
@@ -12,7 +12,7 @@
     <div class="row" *ngFor="let item of services.items$ | async; let i = index">
       <mat-card class="card-info mt-5 bg-success">
         <mat-card-content>
-          <h1>{{item.TenMonHoc</h1>
+          <h1>{{item.TenMonHoc}}</h1>
         </mat-card-content>
       </mat-card>
     </div>
