Cập nhật chỉnh sửa kiểm tra cấu hình

--- a/Angular_Client/src/app/pages/components/__danh_muc/bai-kiem-tra/bai-kiem-tra-add/bai-kiem-tra-add.component.html
+++ b/Angular_Client/src/app/pages/components/__danh_muc/bai-kiem-tra/bai-kiem-tra-add/bai-kiem-tra-add.component.html
@@ -69,7 +69,7 @@
           <div class="form-group row">
             <div class="col-lg-3">
               <label class="form-label">Lớp</label>
-              <mat-select class="form-control" placeholder="Chọn lớp" formControlName="lop">
+              <mat-select class="form-control form-control-lg" placeholder="Chọn lớp" formControlName="lop">
                 <mat-option value="10">Lớp 10</mat-option>
                 <mat-option value="11">Lớp 11</mat-option>
                 <mat-option value="12">Lớp 12</mat-option>
