--- a/Angular_Client/src/app/pages/components/__danh_muc/bai-kiem-tra-cau-hinh/bai-kiem-tra-cau-hinh-edit/bai-kiem-tra-cau-hinh-edit.component.html
+++ b/Angular_Client/src/app/pages/components/__danh_muc/bai-kiem-tra-cau-hinh/bai-kiem-tra-cau-hinh-edit/bai-kiem-tra-cau-hinh-edit.component.html
@@ -2,10 +2,10 @@
     <!-- Header Modal -->
     <div class="card-header">
       <div class="card-title">
-        <h3 class="card-label">Thêm mới bài kiểm tra</h3>
+        <h3 class="card-label">Chỉnh sửa bài kiểm tra</h3>
       </div>
       <div class="card-toolbar">
-        <button type="button" class="btn btn-light btn-elevate mr-2" routerLink="/danh-muc/danh-sach-bai-kiem-tra">
+        <button type="button" class="btn btn-light btn-elevate mr-2" routerLink="/danh-muc/danh-sach-bai-kiem-tra-cau-hinh">
           Trở lại
         </button>
         <div class="btn-group mr-3">
@@ -207,12 +207,6 @@
           </div>
         </div>
         <div class="form-group row">
-          <div class="col-lg-12">
-            <button type="button" class="btn btn-success m-auto" (click)="createQuestion()">
-              <!-- [disabled]="formThongTin.invalid" -->
-              Tạo câu hỏi
-            </button>
-          </div>
         </div>
         <ng-container *ngIf="this.isLoading$ | async">
           <div class="overlay-layer bg-transparent">
