--- a/Angular_Client/src/app/pages/components/__danh_muc/bai-kiem-tra-cau-hinh/bai-kiem-tra-cau-hinh.component.html
+++ b/Angular_Client/src/app/pages/components/__danh_muc/bai-kiem-tra-cau-hinh/bai-kiem-tra-cau-hinh.component.html
@@ -181,6 +181,7 @@
                 matTooltip="Chỉnh sửa"
                 matTooltipPosition="after"
                 class="btn btn-icon btn-light btn-hover-primary btn-sm mr-3"
+                [routerLink]="'./chinh-sua-cau-hinh/' + item.Id"
               >
                 <span
                   [inlineSVG]="'./assets/media/svg/icons/Communication/Write.svg'"
