Cập nhật chức năng đăng nhập

--- a/Angular_Client/src/app/modules/auth/auth.component.html
+++ b/Angular_Client/src/app/modules/auth/auth.component.html
@@ -7,14 +7,14 @@
       <div class="d-flex flex-column-auto flex-column pt-lg-40 pt-15">
         <!--begin::Aside header-->
         <a href="#" class="text-center mb-10">
-          <img src="./assets/media/logos/logo-letter-1.png" class="max-h-70px" alt="" />
+          <img src="./assets/media/logos/thptchilang-logo.png" class="max-h-100px" alt="" />
         </a>
         <!--end::Aside header-->
 
         <!--begin::Aside title-->
         <h3 class="font-weight-bolder text-center font-size-h4 font-size-h1-lg" style="color: #986923;">
-          Discover Amazing Metronic<br />
-          with great build tools
+          "Giáo dục là gốc cho đại kế trăm năm"<br/>
+          -Nông Đức Mạnh-
         </h3>
         <!--end::Aside title-->
       </div>
