--- a/Angular_Client/src/app/modules/auth/login/login.component.html
+++ b/Angular_Client/src/app/modules/auth/login/login.component.html
@@ -11,82 +11,62 @@
     <!--begin::Title-->
     <div class="pb-13 pt-lg-0 pt-5">
       <h3 class="font-weight-bolder text-dark font-size-h4 font-size-h1-lg">
-        Welcome to Metronic
+        HỆ THỐNG TRƯỜNG THPT CHI LĂNG
       </h3>
-      <span class="text-muted font-weight-bold font-size-h4"
-        >New Here?
-        <a
-          routerLink="/auth/registration"
-          id="kt_login_signup"
-          class="text-primary font-weight-bolder"
-          >{{ "AUTH.GENERAL.SIGNUP_BUTTON" | translate }}</a
-        >
-      </span>
     </div>
     <!--end::Title-->
-
-    <!-- begin::Alert info-->
-    <ng-container *ngIf="!hasError">
-      <div class="mb-10 alert alert-custom alert-light-info alert-dismissible">
-        <div class="alert-text">
-          Use account <strong>{{ defaultAuth.email }}</strong> and password
-          <strong>{{ defaultAuth.password }}</strong> to continue.
-        </div>
-      </div>
-    </ng-container>
-    <!-- end::Alert info-->
 
     <!-- begin::Alert error-->
     <ng-container *ngIf="hasError">
       <div
         class="mb-10 alert alert-custom alert-light-danger alert-dismissible"
       >
-        <div class="alert-text">The login details are incorrect</div>
+        <div class="alert-text">Thông tin đăng nhập không chính xác</div>
       </div>
     </ng-container>
     <!-- end::Alert error-->
 
     <!--begin::Form group-->
     <div class="form-group">
-      <label class="font-size-h6 font-weight-bolder text-dark">Email</label>
+      <label class="font-size-h6 font-weight-bolder text-dark">Tên đăng nhập</label>
       <input
         class="form-control form-control-solid h-auto py-7 px-6 rounded-lg"
-        type="email"
-        name="email"
-        formControlName="email"
+        type="text"
+        name="username"
+        formControlName="username"
         autocomplete="off"
-        [ngClass]="{ 'is-invalid': loginForm.controls['email'].invalid }"
+        [ngClass]="{ 'is-invalid': loginForm.controls['username'].invalid }"
       />
       <ng-container
         [ngTemplateOutlet]="formError"
         [ngTemplateOutletContext]="{
           validation: 'required',
-          message: 'Email is required',
-          control: loginForm.controls['email']
+          message: 'Vui lòng nhập tên đăng nhập',
+          control: loginForm.controls['username']
         }"
       ></ng-container>      
       <ng-container
         [ngTemplateOutlet]="formError"
         [ngTemplateOutletContext]="{
-          validation: 'email',
-          message: 'Email is invalid',
-          control: loginForm.controls['email']
+          validation: 'username',
+          message: 'Tên đăng nhập sai yêu cầu',
+          control: loginForm.controls['username']
         }"
       ></ng-container>
       <ng-container
         [ngTemplateOutlet]="formError"
         [ngTemplateOutletContext]="{
           validation: 'minLength',
-          message: 'Email should have at least 3 symbols',
-          control: loginForm.controls['email']
+          message: 'Tên đăng nhập không được nhỏ hơn 3 kí tự',
+          control: loginForm.controls['username']
         }"
       ></ng-container>
       <ng-container
         [ngTemplateOutlet]="formError"
         [ngTemplateOutletContext]="{
           validation: 'maxLength',
-          message: 'Email should have maximum 360 symbols',
-          control: loginForm.controls['email']
+          message: 'Tên đăng nhập không được lớn hơn 360 kí tự',
+          control: loginForm.controls['username']
         }"
       ></ng-container>
     </div>
@@ -96,14 +76,14 @@
     <div class="form-group">
       <div class="d-flex justify-content-between mt-n5">
         <label class="font-size-h6 font-weight-bolder text-dark pt-5"
-          >Password</label
+          >Mật khẩu</label
         >
         <a
           routerLink="/auth/forgot-password"
           class="text-primary font-size-h6 font-weight-bolder text-hover-primary pt-5"
           id="kt_login_forgot"
         >
-          Forgot Password ?
+          Thầy/cô quên mật khẩu ?
         </a>
       </div>
 
@@ -119,7 +99,7 @@
         [ngTemplateOutlet]="formError"
         [ngTemplateOutletContext]="{
           validation: 'required',
-          message: 'Password is required',
+          message: 'Vui lòng nhập mật khẩu',
           control: loginForm.controls['password']
         }"
       ></ng-container>
@@ -127,7 +107,7 @@
         [ngTemplateOutlet]="formError"
         [ngTemplateOutletContext]="{
           validation: 'minlength',
-          message: 'Password should have at least 3 symbols',
+          message: 'Mật khẩu không được nhỏ hơn 3 kí tự',
           control: loginForm.controls['password']
         }"
       ></ng-container>
@@ -135,7 +115,7 @@
         [ngTemplateOutlet]="formError"
         [ngTemplateOutletContext]="{
           validation: 'maxLength',
-          message: 'Password should have maximum 100 symbols',
+          message: 'Mật khẩu không được lớn hơn 360 kí tự',
           control: loginForm.controls['password']
         }"
       ></ng-container>
@@ -150,17 +130,7 @@
         class="btn btn-primary font-weight-bolder font-size-h6 px-8 py-4 my-3 mr-3"
         [disabled]="loginForm.invalid"
       >
-        Sign In
-      </button>
-
-      <button
-        type="button"
-        class="btn btn-light-primary font-weight-bolder px-8 py-4 my-3 font-size-lg"
-      >
-        <span class="svg-icon svg-icon-md">
-          <img src="./assets/media/svg/social-icons/google.svg" />
-        </span>
-        Sign in with Google
+        Đăng nhập
       </button>
 
       <ng-container *ngIf="isLoading$ | async">
