--- a/Angular_Client/src/app/pages/_layout/components/topbar/topbar.component.html
+++ b/Angular_Client/src/app/pages/_layout/components/topbar/topbar.component.html
@@ -89,7 +89,7 @@
           class="btn btn-icon btn-icon-mobile w-auto btn-clean d-flex align-items-center btn-lg px-2"
           id="kt_quick_user_toggle"
         >
-          <span class="text-muted font-weight-bold font-size-base d-none d-md-inline mr-1">Hi,</span>
+          <span class="text-muted font-weight-bold font-size-base d-none d-md-inline mr-1">Chào,</span>
           <span class="text-dark-50 font-weight-bolder font-size-base d-none d-md-inline mr-3">{{
             _user.fullname
           }}</span>
@@ -108,7 +108,7 @@
       <div class="dropdown" ngbDropdown placement="bottom-right">
         <div class="topbar-item" data-toggle="dropdown" data-offset="0px,0px" ngbDropdownToggle>
           <div class="btn btn-icon w-auto btn-clean d-flex align-items-center btn-lg px-2">
-            <span class="text-muted font-weight-bold font-size-base d-none d-md-inline mr-1">Hello,</span>
+            <span class="text-muted font-weight-bold font-size-base d-none d-md-inline mr-1">Chào,</span>
             <span class="text-dark-50 font-weight-bolder font-size-base d-none d-md-inline mr-3">{{
               _user.fullname
             }}</span>
