--- a/Angular_Client/src/app/pages/components/__danh_muc/bai-kiem-tra-cau-hinh/bai-kiem-tra-cau-hinh-edit/bai-kiem-tra-cau-hinh-edit.component.html
+++ b/Angular_Client/src/app/pages/components/__danh_muc/bai-kiem-tra-cau-hinh/bai-kiem-tra-cau-hinh-edit/bai-kiem-tra-cau-hinh-edit.component.html
@@ -15,7 +15,7 @@
               <i class="ki ki-arrow-down icon-sm"></i>
             </button>
             <div class="dropdown-menu mt-3" ngbDropdownMenu>
-              <button ngbDropdownItem>Lưu tạm</button>
+              <button ngbDropdownItem (click)="saveTemp()">Lưu tạm</button>
               <button ngbDropdownItem>Lưu và thêm mới</button>
             </div>
           </div>
