--- a/Angular_Client/src/app/pages/components/__danh_muc/bai-kiem-tra-cau-hinh/bai-kiem-tra-cau-hinh.component.html
+++ b/Angular_Client/src/app/pages/components/__danh_muc/bai-kiem-tra-cau-hinh/bai-kiem-tra-cau-hinh.component.html
@@ -166,6 +166,7 @@
               <a 
                 matTooltip="In bài kiểm tra" 
                 matTooltipPosition="after" 
+                *ngIf="item.TrangThai!=1"
                 [routerLink]="'./print/' + item.Id"
                 class="btn btn-icon btn-light btn-hover-primary btn-sm mr-3"
               >
