--- a/APICore_SoanDeThi/Views/Print/index.cshtml
+++ b/APICore_SoanDeThi/Views/Print/index.cshtml
@@ -14,6 +14,7 @@
         box-sizing: border-box;
         font-size: 12pt;
         line-height: 1.5;
+        letter-spacing: 1px;
     }
 
     .info,
