--- a/Angular_Client/src/app/pages/_layout/layout.component.html
+++ b/Angular_Client/src/app/pages/_layout/layout.component.html
@@ -54,9 +54,9 @@
           [ngClass]="contentClasses"
         >
           <!-- begin:: Content Head -->
-          <ng-container *ngIf="subheaderDisplay">
+          <!-- <ng-container *ngIf="subheaderDisplay">
             <app-subheader-wrapper></app-subheader-wrapper>
-          </ng-container>
+          </ng-container> -->
           <!-- end:: Content Head -->
 
           <!-- begin:: Content Body -->
