--- a/Angular_Client/src/app/pages/components/__danh_muc/bai-kiem-tra-truc-tuyen/bai-kiem-tra-truc-tuyen.component.html
+++ b/Angular_Client/src/app/pages/components/__danh_muc/bai-kiem-tra-truc-tuyen/bai-kiem-tra-truc-tuyen.component.html
@@ -45,118 +45,6 @@
         </div>
       </div>
       <!-- End Search Filter -->
-  
-      <!-- Data table -->
-      <div class="table-responsive angular-bootstrap-table">
-        <table class="table table-head-custom table-vertical-center overflow-hidden">
-          <thead>
-            <th>STT</th>
-            <th>
-              Tên bài kiểm tra
-              <app-sort-icon
-                column="Name"
-                [activeColumn]="sorting.column"
-                [activeDirection]="sorting.direction"
-                (sort)="sort($event)"
-              ></app-sort-icon>
-            </th>
-            <th>
-              Số lượng đề
-              <app-sort-icon
-                column="TestAmount"
-                [activeColumn]="sorting.column"
-                [activeDirection]="sorting.direction"
-                (sort)="sort($event)"
-              ></app-sort-icon>
-            </th>
-            <th>
-              Khối
-              <app-sort-icon
-                column="Class"
-                [activeColumn]="sorting.column"
-                [activeDirection]="sorting.direction"
-                (sort)="sort($event)"
-              ></app-sort-icon>
-            </th>
-            <th>Thao tác</th>
-          </thead>
-          <tbody>
-            <tr *ngFor="let item of services.items$ | async; let i = index">
-              <td class="selection-cell">
-                <label class="checkbox checkbox-single"
-                  ><input
-                    type="checkbox"
-                    (click)="grouping.selectRow(item.Id)"
-                    [checked]="grouping.isRowSelected(item.Id)"
-                  />
-                  <span></span>
-                </label>
-              </td>
-              <td>{{ i + 1 }}</td>
-              <td>{{ item.TenBaiKiemTra}} ({{item.NamHoc}})</td>
-              <td>{{ item.SoLuongDe }} đề</td>
-              <td>{{ item.Lop }}</td>
-              <td>
-                <a
-                  matTooltip="Xem chi tiết"
-                  matTooltipPosition="after"
-                  class="btn btn-icon btn-light btn-hover-primary btn-sm mr-3"
-                >
-                  <!-- (click)="detail(item.IdQuestion)" -->
-                  <span
-                    [inlineSVG]="'./assets/media/svg/icons/General/Visible.svg'"
-                    cacheSVG="true"
-                    class="svg-icon svg-icon-md svg-icon-primary"
-                  >
-                  </span>
-                </a>
-                <a
-                  matTooltip="In bài kiểm tra"
-                  matTooltipPosition="after"
-                  class="btn btn-icon btn-light btn-hover-primary btn-sm mr-3"
-                  (click)="print(item.Id)"
-                >
-                  <span
-                    [inlineSVG]="'./assets/media/svg/icons/Devices/Printer.svg'"
-                    cacheSVG="true"
-                    class="svg-icon svg-icon-md svg-icon-primary"
-                  >
-                  </span>
-                </a>
-                <a
-                  matTooltip="Chỉnh sửa"
-                  matTooltipPosition="after"
-                  class="btn btn-icon btn-light btn-hover-primary btn-sm mr-3"
-                >
-                  <span
-                    [inlineSVG]="'./assets/media/svg/icons/Communication/Write.svg'"
-                    cacheSVG="true"
-                    class="svg-icon svg-icon-md svg-icon-primary"
-                  >
-                  </span>
-                </a>
-                <a
-                  matTooltip="Xóa"
-                  matTooltipPosition="after"
-                  class="btn btn-icon btn-light btn-hover-danger btn-sm"
-                  (click)="delete(item.Id)"
-                >
-                  <span
-                    [inlineSVG]="'./assets/media/svg/icons/General/Trash.svg'"
-                    cacheSVG="true"
-                    class="svg-icon svg-icon-md svg-icon-danger"
-                  >
-                  </span>
-                </a>
-              </td>
-            </tr>
-          </tbody>
-        </table>
-        <div class="text-center" style="margin: 20px 0; text-transform: uppercase" *ngIf="isEmptyDataSource()">
-          Không có dữ liệu
-        </div>
-      </div>
-      <!-- End Data Table -->
       <div class="card-body d-flex flex-row bd-highlight flex-wrap justify-content-between">
         <ng-container *ngFor="let item of services.items$ | async; let i = index">
             <div class="card mb-3 mr-3" style="width: 30%">
@@ -169,7 +57,7 @@
                 <li class="list-group-item">Thời gian làm bài: {{item.ThoiGianLamBai}} (phút)</li>
               </ul>
               <div class="card-body">
-                <a href="#" class="card-link">Bổ sung/chỉnh sửa thông tin</a>
+                <a class="card-link" [routerLink]="'./chinh-sua/' + item.Id">Bổ sung/chỉnh sửa thông tin</a>
               </div>
             </div>
         </ng-container>
