--- a/Angular_Client/src/app/pages/components/__danh_muc/bai-kiem-tra/bai-kiem-tra-add/bai-kiem-tra-add.component.html
+++ b/Angular_Client/src/app/pages/components/__danh_muc/bai-kiem-tra/bai-kiem-tra-add/bai-kiem-tra-add.component.html
@@ -135,68 +135,83 @@
         <form action="#" class="form form-label-right" [formGroup]="secondFormGroup">
           <div class="form-group row">
             <div class="col-lg-3">
-              <label class="form-label">Số lượng câu dễ</label>
+              <label class="form-label">Số lượng câu biết</label>
               <input
                 type="number"
                 class="form-control form-control-lg text-right"
-                placeholder="Nhập số lượng câu dễ"
-                formControlName="cauDe"
-                [class.is-invalid]="ValidateFormGroupEvent('cauDe', secondFormGroup, 1)"
-                [class.is-invalid]="ValidateFormGroupEvent('cauDe', secondFormGroup, 1, 'min')"
-                [class.is-valid]="ValidateFormGroupEvent('cauDe', secondFormGroup, 0)"
+                placeholder="Nhập số lượng câu biết"
+                formControlName="cauBiet"
+                [class.is-invalid]="ValidateFormGroupEvent('cauBiet', secondFormGroup, 1)"
+                [class.is-invalid]="ValidateFormGroupEvent('cauBiet', secondFormGroup, 1, 'min')"
+                [class.is-valid]="ValidateFormGroupEvent('cauBiet', secondFormGroup, 0)"
               />
-              <div class="valid-feedback" *ngIf="ValidateFormGroupEvent('cauDe', secondFormGroup, 0)">
+              <div class="valid-feedback" *ngIf="ValidateFormGroupEvent('cauBiet', secondFormGroup, 0)">
                 Thông tin chính xác
               </div>
-              <div class="invalid-feedback" *ngIf="ValidateFormGroupEvent('cauDe', secondFormGroup, 1)">
-                Vui lòng nhập số lượng câu dễ
+              <div class="invalid-feedback" *ngIf="ValidateFormGroupEvent('cauBiet', secondFormGroup, 1)">
+                Vui lòng nhập số lượng câu biết
               </div>
             </div>
             <div class="col-lg-3">
-              <label class="form-label">Số lượng câu trung bình</label>
+              <label class="form-label">Số lượng câu hiểu</label>
               <input
                 type="number"
                 class="form-control form-control-lg text-right"
-                placeholder="Nhập số lượng câu dễ"
-                formControlName="cauTrungBinh"
-                [class.is-invalid]="ValidateFormGroupEvent('cauTrungBinh', secondFormGroup, 1)"
-                [class.is-invalid]="ValidateFormGroupEvent('cauTrungBinh', secondFormGroup, 1, 'min')"
-                [class.is-valid]="ValidateFormGroupEvent('cauTrungBinh', secondFormGroup, 0)"
+                placeholder="Nhập số lượng câu hiểu"
+                formControlName="cauHieu"
+                [class.is-invalid]="ValidateFormGroupEvent('cauHieu', secondFormGroup, 1)"
+                [class.is-invalid]="ValidateFormGroupEvent('cauHieu', secondFormGroup, 1, 'min')"
+                [class.is-valid]="ValidateFormGroupEvent('cauHieu', secondFormGroup, 0)"
               />
-              <div class="valid-feedback" *ngIf="ValidateFormGroupEvent('cauTrungBinh', secondFormGroup, 0)">
+              <div class="valid-feedback" *ngIf="ValidateFormGroupEvent('cauHieu', secondFormGroup, 0)">
                 Thông tin chính xác
               </div>
-              <div class="invalid-feedback" *ngIf="ValidateFormGroupEvent('cauTrungBinh', secondFormGroup, 1)">
-                Vui lòng nhập số lượng câu trung bình
+              <div class="invalid-feedback" *ngIf="ValidateFormGroupEvent('cauHieu', secondFormGroup, 1)">
+                Vui lòng nhập số lượng câu hiểu
               </div>
             </div>
             <div class="col-lg-3">
-              <label class="form-label">Số lượng câu khó</label>
+              <label class="form-label">Số lượng câu vận dụng thấp</label>
               <input
                 type="number"
                 class="form-control form-control-lg text-right"
-                placeholder="Nhập số lượng câu dễ"
-                formControlName="cauKho"
-                [class.is-invalid]="ValidateFormGroupEvent('cauKho', secondFormGroup, 1)"
-                [class.is-invalid]="ValidateFormGroupEvent('cauKho', secondFormGroup, 1, 'min')"
-                [class.is-valid]="ValidateFormGroupEvent('cauKho', secondFormGroup, 0)"
+                placeholder="Nhập số lượng câu vận dụng thấp"
+                formControlName="cauVanDungThap"
+                [class.is-invalid]="ValidateFormGroupEvent('cauVanDungThap', secondFormGroup, 1)"
+                [class.is-invalid]="ValidateFormGroupEvent('cauVanDungThap', secondFormGroup, 1, 'min')"
+                [class.is-valid]="ValidateFormGroupEvent('cauVanDungThap', secondFormGroup, 0)"
               />
-              <div class="valid-feedback" *ngIf="ValidateFormGroupEvent('cauKho', secondFormGroup, 0)">
+              <div class="valid-feedback" *ngIf="ValidateFormGroupEvent('cauVanDungThap', secondFormGroup, 0)">
                 Thông tin chính xác
               </div>
-              <div class="invalid-feedback" *ngIf="ValidateFormGroupEvent('cauKho', secondFormGroup, 1)">
-                Vui lòng nhập số lượng câu khó
+              <div class="invalid-feedback" *ngIf="ValidateFormGroupEvent('cauVanDungCao', secondFormGroup, 1)">
+                Vui lòng nhập số lượng câu vận dụng thấp
               </div>
             </div>
             <div class="col-lg-3">
-              <label class="form-label">Số lượng tổng</label>
+              <label class="form-label">Số lượng câu vận dụng cao</label>
               <input
                 type="number"
                 class="form-control form-control-lg text-right"
-                placeholder="Nhập số lượng câu dễ"
-                [value]="getSum()"
-                readonly
+                placeholder="Nhập số lượng câu vận dụng cao"
+                formControlName="cauVanDungCao"
+                [class.is-invalid]="ValidateFormGroupEvent('cauVanDungCao', secondFormGroup, 1)"
+                [class.is-invalid]="ValidateFormGroupEvent('cauVanDungCao', secondFormGroup, 1, 'min')"
+                [class.is-valid]="ValidateFormGroupEvent('cauVanDungCao', secondFormGroup, 0)"
               />
+              <div class="valid-feedback" *ngIf="ValidateFormGroupEvent('cauVanDungCao', secondFormGroup, 0)">
+                Thông tin chính xác
+              </div>
+              <div class="invalid-feedback" *ngIf="ValidateFormGroupEvent('cauVanDungCao', secondFormGroup, 1)">
+                Vui lòng nhập số lượng câu vận dụng cao
+              </div>
+            </div>
+          </div>
+          <div class="form-group row">
+            <div class="col-lg-12 text-right">
+              <p>
+                Tổng câu hỏi: <strong class="text-danger">{{ getSum() }}</strong>
+              </p>
             </div>
           </div>
           <div>
